#12662 - fixe list spacing
git-svn-id: https://central.tri.be/svn/premium-plugins/code/events/branches/2.0@806 75e66736-2afa-4fbe-8bd5-dce959cd71f9

--- a/resources/events.css
+++ b/resources/events.css
@@ -388,8 +388,9 @@ h4.tribe-events-event-day + .post .entry-title {margin-top:6px;}
 #tribe-events-events-picker, #tribe-events-picker {
 	display:inline;
 }
-.eventsListWidget li {
+.eventsListWidget li, .singular.page li.hentry {
 	margin:6px 0;
+   padding: 0 0 10px 0;
 }
 
 .navlink{
